--- a/Web Front End Estática/Aula 2/Exércicios/meuwebsite/index.html
+++ b/Web Front End Estática/Aula 2/Exércicios/meuwebsite/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>index</h1>
-</body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Exercício 1 - Index</title>
+  </head>
+  <body>
+    <h1>INDEX</h1>
+    <ul>
+      <li><a href="sobre.html">Sobre Nós</a></li>
+      <li><a href="cursos/web.html">Web</a></li>
+      <li><a href="cursos/python/python.html">Python</a></li>
+    </ul>
+  </body>
 </html>
