--- a/Web Front End Estática/Aula 2/Exércicios/meuwebsite/sobre.html
+++ b/Web Front End Estática/Aula 2/Exércicios/meuwebsite/sobre.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercício 1 - Sobre</title>
 </head>
 <body>
-    
+    <h1>Sobre Nós</h1>
+    <ul>
+      <li><a href="index.html">Index</a></li>
+      <li><a href="cursos/web.html">Web</a></li>
+      <li><a href="cursos/python/python.html">Python</a></li>
+    </ul>
 </body>
 </html>
