atualização index.html

--- a/Web Front End Estática/Aula 2/Exércicios/meuwebsite/index.html
+++ b/Web Front End Estática/Aula 2/Exércicios/meuwebsite/index.html
@@ -7,9 +7,9 @@
     <title>Exercício 1 - Index</title>
   </head>
   <body>
-    <h1>INDEX</h1>
+    <h1>Index</h1>
     <ul>
-      <li><a href="sobre.html">Sobre Nós</a></li>
+      <li><a href="sobre.html">Sobre</a></li>
       <li><a href="cursos/web.html">Web</a></li>
       <li><a href="cursos/python/python.html">Python</a></li>
     </ul>
