inicio do exercicio 2

--- a/Web Front End Estática/Aula 2/Exércicios/meuwebsite/sobre.html
+++ b/Web Front End Estática/Aula 2/Exércicios/meuwebsite/sobre.html
@@ -7,7 +7,7 @@
     <title>Exercício 1 - Sobre</title>
 </head>
 <body>
-    <h1>Sobre Nós</h1>
+    <h1>Sobre</h1>
     <ul>
       <li><a href="index.html">Index</a></li>
       <li><a href="cursos/web.html">Web</a></li>
