comentários do exercício para entrega

--- a/Web Front End Estática/Aula 3 - FORMS/ex-formulario.html
+++ b/Web Front End Estática/Aula 3 - FORMS/ex-formulario.html
@@ -7,9 +7,13 @@
     <title>Document</title>
   </head>
   <body>
+    
     <h1>Formulário para cadastro de livros no e-commerce do fulano:</h1>
 
+    <!-- Formulário de cadastro -->
     <form>
+    
+    <!-- título do livro -->
     <div>
       <label for="titulo-livro">Título:</label>
       <input
@@ -20,6 +24,7 @@
       />
     </div>
 
+    <!-- Ano de publicação -->
     <div>
       <label for="ano-publicacao">Ano de Publicação:</label>
       <input
@@ -30,31 +35,37 @@
       />
     </div>
 
+    <!-- Ano de edição -->
     <div>
       <label for="ano-edicao">Número da Edição:</label>
       <input type="number" name="ano-edicao" id="ano-edicao" value="1" />
     </div>
 
+    <!-- Email -->
     <div>
       <label for="email">Email do Editor:</label>
       <input type="email" name="email" id="email" />
     </div>
 
+    <!-- Upload da foto -->
     <div>
       <label for="foto">Foto:</label>
       <input type="file" name="foto" id="foto" />
     </div>
 
+    <!-- Nome do Autor -->
     <div>
       <label for="nome-autor">Nome do Autor</label>
       <input type="text" name="nome-autor" id="nome-autor" />
     </div>
 
+    <!-- Data de Nascimento -->
     <div>
       <label for="data-nascimento">Data de Nascimento do autor</label>
       <input type="date" name="data-nascimento" id="data-nascimento" />
     </div>
 
+    <!-- Checkbox com tipos de livro disponível -->
     <div>
       <br />
       <div>Tipos diponivel:</div>
