--- a/Web Front End Estática/Aula 2/Exércicios/02 - Construindo uma página HTML - Parte 1/pagina_web/index.html
+++ b/Web Front End Estática/Aula 2/Exércicios/02 - Construindo uma página HTML - Parte 1/pagina_web/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Comedian WebSite</title>
-    <link id="favicon" rel="shortcut icon" href="https://th.bing.com/th/id/OIP.Cn9M8pOT9z-XzpiATkSG7QHaHa?pid=ImgDet&rs=1">
-
+    <link
+      id="favicon"
+      rel="shortcut icon"
+      href="https://th.bing.com/th/id/OIP.Cn9M8pOT9z-XzpiATkSG7QHaHa?pid=ImgDet&rs=1"
+    />
   </head>
   <body>
     <!-- MENU DE NAVEGAÇÃO -->
@@ -36,7 +39,7 @@
             <!-- MENU PIADAS -->
             <li>
               <img
-                width="20px" 
+                width="20px"
                 src="https://i.pinimg.com/originals/65/52/70/65527018cce2e56edfa9a9aff175be26.png"
                 alt="foto de uma piada"
               />
@@ -51,22 +54,23 @@
       <h1>Bem vindo ao Comedian WebSite</h1>
 
       <article>
-        É sempre bom procrastinar na internet dando umas risadas. Para isso na internet brazuca temos blogs de grande destaque quando o assunto é humor. Neste agregador de conteúdo você confere uma lista dos maiores e melhores sites de humor no Brasil.
+        É sempre bom procrastinar na internet dando umas risadas. Para isso na
+        internet brazuca temos blogs de grande destaque quando o assunto é
+        humor. Neste agregador de conteúdo você confere uma lista dos maiores e
+        melhores sites de humor no Brasil.
       </article>
-      <br>
+      <br />
 
-      <!-- <iframe width="420" height="315"
-      src="http://www.youtube.com/embed/XGSy3_Czz8k?autoplay=1">
-      </iframe> -->
-
-      <iframe width="420" height="315"
-      src="https://www.youtube.com/embed/CqWRe5euiEU/?autoplay=1">
+      <iframe
+        width="420"
+        height="315"
+        src="https://www.youtube.com/embed/CqWRe5euiEU/?autoplay=1"
+      >
       </iframe>
-
     </main>
 
     <footer>
-      <hr>
+      <hr />
       Copright ® 2021 | Felipe Schiavini
     </footer>
   </body>
