--- a/Web Front End Estática/Aula 7 -  Seletores do CSS e Flexbox/Exercício Foursquare/homepage.html
+++ b/Web Front End Estática/Aula 7 -  Seletores do CSS e Flexbox/Exercício Foursquare/homepage.html
@@ -296,7 +296,8 @@
       <section class="box">
         <div class="bg-content">
           <p class="texts-old-font">[company news]</p>
-          <h2>MRC grants Foursquare<br />Visits first-ever accreditation</h2>
+          <p class = "h2">MRC grants Foursquare</p>
+          <Visits class = "h2">Visits first-ever accreditation</p>
         </div>
         <div class="background"></div>
       </section>
